--- a/index.html
+++ b/index.html
@@ -594,7 +594,9 @@
         </div>
       </div>
 
-      <span class="footer__copy">&#169; Bedimcode. All rigths reserved</span>
+      <span class="footer__copy"
+        >&#169; Milli D Gemini. All rigths reserved</span
+      >
 
       <img src="assets/img/footer1-img.png" alt="" class="footer__img-one" />
       <img src="assets/img/footer2-img.png" alt="" class="footer__img-two" />
